--- a/model_v00.html
+++ b/model_v00.html
@@ -106,7 +106,7 @@ to &lt;- sapply(str_split(edgeNames(g), &quot;~&quot;), function(pair) pair[2])
 d3SimpleNetwork(data.frame(from,to), file=&quot;d3graph.html&quot;, 
                 fontsize=13, linkDistance=150, 
                 iframe=TRUE, width=400, height=300)</code></pre>
-<iframe src="d3graph.html" height="327" width="420"></iframe>
+<iframe src="d3graph.html" height="327" width="420" seamless></iframe>
 
 
 </div>
